--- a/410ShopManagement/401UC/ImportUnit.xaml
+++ b/410ShopManagement/401UC/ImportUnit.xaml
@@ -7,7 +7,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
              Background="Transparent">
-    <Grid Width="160" Height="160">
+    <Grid Width="160" Height="180">
         <Border CornerRadius="25 0 25 25"
                 Background="#00F988">
             <StackPanel Orientation="Vertical"
@@ -18,6 +18,12 @@
                        Source="/410ShopManagement;component/Assets/Phựn.jpg" Stretch="Fill" />
                 <TextBlock x:Name="productNameTbl" 
                            Text="Name"
+                           FontSize="20" FontFamily="Calibri" 
+                           TextElement.Foreground="{StaticResource secondTextForeground}"
+                           TextTrimming="CharacterEllipsis"
+                           HorizontalAlignment="Center" />
+                <TextBlock x:Name="productPriceTbl" 
+                           Text="Price"
                            FontSize="20" FontFamily="Calibri" 
                            TextElement.Foreground="{StaticResource secondTextForeground}"
                            TextTrimming="CharacterEllipsis"
