--- a/410ShopManagement/Windows/ProductInsightWindow.xaml
+++ b/410ShopManagement/Windows/ProductInsightWindow.xaml
@@ -47,21 +47,8 @@
                                    Margin="15 10 0 15" HorizontalAlignment="Center" />
                         <Image x:Name="productImg" Width="250" Height="250" 
                                Source="/410ShopManagement;component/Assets/Phựn.jpg" Stretch="Fill"/>
-                        <StackPanel Orientation="Horizontal" Margin="0 25 0 0">
-                            <TextBlock Name="productPriceTxb"
-                                Text="300000"
-                                   FontSize="46" FontFamily="Calibri" 
-                                   TextElement.Foreground="#00F988"
-                                   TextTrimming="CharacterEllipsis"
-                                   TextAlignment="Right"
-                                   Width="155"
-                                   Margin="15 0 0 0"/>
-                            <TextBlock Text="VND"
-                                   FontSize="46" FontFamily="Calibri" 
-                                   TextElement.Foreground="#00F988"
-                                   TextAlignment="Left"
-                                   Width="85"
-                                   Margin="15 0 0 0"/>
+                        <StackPanel Orientation="Horizontal" 
+                                    Margin="0 10 0 0" HorizontalAlignment="Center">
                             <TextBlock Margin="0 3 0 0"
                                      Text="(" FontSize="26" FontFamily="Bauhaus 93" 
                                      TextElement.Foreground="#FFFF0C5A"
@@ -74,29 +61,51 @@
                                      Background="{x:Null}"
                                      materialDesign:TextFieldAssist.HasOutlinedTextField="False"
                                      materialDesign:TextFieldAssist.UnderlineBrush="{x:Null}"
-                                     TextChanged="saleTxb_TextChanged"/>
+                                     TextChanged="saleTxb_TextChanged"
+                                     PreviewKeyDown="NumberTxb_PreviewKeyDown"/>
                             <TextBlock Margin="0 3 0 0"
                                      Text="%)" FontSize="26" FontFamily="Bauhaus 93" 
                                      TextElement.Foreground="#FFFF0C5A"
                                      Width="auto"/>
                         </StackPanel>
 
+                        <StackPanel Orientation="Horizontal"
+                                    HorizontalAlignment="Center">
+                            <TextBlock Name="productPriceTxb"
+                                Text="300000"
+                                   FontSize="46" FontFamily="Calibri" 
+                                   TextElement.Foreground="#00F988"
+                                   TextTrimming="CharacterEllipsis"
+                                   TextAlignment="Right"
+                                   Width="auto" MaxWidth="220"
+                                   Margin="15 0 0 0"/>
+                            <TextBlock Text="VND"
+                                   FontSize="46" FontFamily="Calibri" 
+                                   TextElement.Foreground="#00F988"
+                                   TextAlignment="Left"
+                                   Width="85"
+                                   Margin="15 0 0 0"/>
+                        </StackPanel>
+
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <TextBox x:Name="productBasePriceTbl"
+                                     IsEnabled="False"
                                    Text="300000"
                                    FontSize="30" FontFamily="Calibri" 
                                    TextElement.Foreground="DimGray"
                                    TextAlignment="Center"
-                                   Width="120"
+                                   Width="auto" MaxLength="9" 
                                    HorizontalAlignment="Center"
-                                   Opacity=".7" TextDecorations="Strikethrough"/>
-                            <TextBlock Text="VND"
+                                   Opacity=".7" TextDecorations="Strikethrough"
+                                   TextChanged="productBasePriceTbl_TextChanged"
+                                     PreviewKeyDown="NumberTxb_PreviewKeyDown"/>
+                            <TextBlock Text=" VND"
                                    FontSize="30" FontFamily="Calibri" 
                                    TextElement.Foreground="DimGray"
                                    TextTrimming="CharacterEllipsis"
                                    TextAlignment="Left"
-                                   Width="60"
-                                   HorizontalAlignment="Center"
+                                   Width="auto"
+                                   HorizontalAlignment="Center" VerticalAlignment="Center"
                                    Opacity=".7" TextDecorations="Strikethrough"/>
                         </StackPanel>
                     </StackPanel>
@@ -138,29 +147,49 @@
                                      materialDesign:HintAssist.IsFloating="True"
                                      materialDesign:HintAssist.FloatingScale=".5"/>
 
-                        <TextBox x:Name="sexTxb"
+                        <ComboBox x:Name="sexTxb"
                             IsEnabled="False"
                                      FontSize="26" FontFamily="Calibri" 
                                      TextElement.Foreground="{StaticResource secondTextForeground}"
-                                     TextAlignment="Left"
-                                     Width="450"
                                      HorizontalAlignment="Left"
-                                     Background="{x:Null}"
                                      materialDesign:HintAssist.Hint="Sex"
                                      materialDesign:HintAssist.IsFloating="True"
-                                     materialDesign:HintAssist.FloatingScale=".5"/>
+                                     materialDesign:HintAssist.FloatingScale=".5">
+                            <ComboBoxItem>
+                                Unisex
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Male
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                Female
+                            </ComboBoxItem>
+                        </ComboBox>
 
-                        <TextBox x:Name="sizeTxb"
+                        <ComboBox x:Name="sizeTxb"
                             IsEnabled="False"
                                      FontSize="26" FontFamily="Calibri" 
                                      TextElement.Foreground="{StaticResource secondTextForeground}"
-                                     TextAlignment="Left"
-                                     Width="450"
                                      HorizontalAlignment="Left"
-                                     Background="{x:Null}"
                                      materialDesign:HintAssist.Hint="Size"
                                      materialDesign:HintAssist.IsFloating="True"
-                                     materialDesign:HintAssist.FloatingScale=".5"/>
+                                     materialDesign:HintAssist.FloatingScale=".5">
+                            <ComboBoxItem>
+                                S
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                M
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                L
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                XL
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                XXL
+                            </ComboBoxItem>
+                        </ComboBox>
 
                         <TextBox x:Name="colorTxb"
                             IsEnabled="False"
@@ -194,12 +223,13 @@
                                      TextAlignment="Left"
                                      Background="{x:Null}"
                                      Margin="15 0"
-                                     MaxWidth="110"
+                                     MaxWidth="110" MaxLength="5"
                                      materialDesign:HintAssist.Hint="Storage"
                                      materialDesign:HintAssist.IsFloating="True"
                                      materialDesign:HintAssist.FloatingScale=".5"
                                      materialDesign:TextFieldAssist.HasOutlinedTextField="False"
-                                     materialDesign:TextFieldAssist.UnderlineBrush="{x:Null}"/>
+                                     materialDesign:TextFieldAssist.UnderlineBrush="{x:Null}"
+                                     PreviewKeyDown="NumberTxb_PreviewKeyDown"/>
 
                             <TextBox x:Name="soldTxb" 
                                      IsEnabled="False"
@@ -208,12 +238,13 @@
                                      TextAlignment="Left"
                                      Background="{x:Null}"
                                      Margin="15 0"
-                                     MaxWidth="110"
+                                     MaxWidth="110" MaxLength="5"
                                      materialDesign:HintAssist.Hint="Sold"
                                      materialDesign:HintAssist.IsFloating="True"
                                      materialDesign:HintAssist.FloatingScale=".5"
                                      materialDesign:TextFieldAssist.HasOutlinedTextField="False"
-                                     materialDesign:TextFieldAssist.UnderlineBrush="{x:Null}"/>
+                                     materialDesign:TextFieldAssist.UnderlineBrush="{x:Null}"
+                                     PreviewKeyDown="NumberTxb_PreviewKeyDown"/>
 
                             <TextBox x:Name="cancelledTxb" 
                                      IsEnabled="False"
@@ -222,12 +253,13 @@
                                      TextAlignment="Left"
                                      Background="{x:Null}"
                                      Margin="15 0"
-                                     MaxWidth="110"
+                                     MaxWidth="110" MaxLength="5"
                                      materialDesign:HintAssist.Hint="Cancelled"
                                      materialDesign:HintAssist.IsFloating="True"
                                      materialDesign:HintAssist.FloatingScale=".5"
                                      materialDesign:TextFieldAssist.HasOutlinedTextField="False"
-                                     materialDesign:TextFieldAssist.UnderlineBrush="{x:Null}"/>
+                                     materialDesign:TextFieldAssist.UnderlineBrush="{x:Null}"
+                                     PreviewKeyDown="NumberTxb_PreviewKeyDown"/>
                         </StackPanel>
 
                         <Grid HorizontalAlignment="Right"
