--- a/410ShopManagement/Windows/TransactionHistoryWindow.xaml
+++ b/410ShopManagement/Windows/TransactionHistoryWindow.xaml
@@ -32,7 +32,8 @@
 
             <StackPanel Grid.Row="1" Orientation="Vertical"
                         Background="{StaticResource backgroundThemeColor}">
-                <DatePicker x:Name="datePkr"
+                <StackPanel Orientation="Horizontal">
+                    <DatePicker x:Name="datePkr"
                             Width="500" Height="100"
                             Margin="50 0" HorizontalAlignment="Left" VerticalAlignment="Center"
                             materialDesign:HintAssist.Hint="Pick Date"
@@ -40,6 +41,28 @@
                             BorderBrush="{StaticResource secondTextForeground}"
                             TextElement.Foreground="{StaticResource secondTextForeground}"
                             Style="{StaticResource MaterialDesignFilledDatePicker}" />
+                    
+                    <Button x:Name="applyBtn"
+                        Style="{StaticResource MaterialDesignIconButton}"
+                        Width="100" Height="100"
+                        BorderBrush="{x:Null}" Background="{x:Null}"
+                        Margin="200 0 0 0"
+                        Click="ApplyButton_Click">
+                        <materialDesign:PackIcon Kind="FindInPage" Width="90" Height="90" Foreground="#00F988"/>
+                        <Button.Triggers>
+                            <EventTrigger RoutedEvent="Button.MouseEnter">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation
+                                Storyboard.TargetProperty="Opacity"
+                                Duration="0:0:1" 
+                                From="0.25" To="1"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </Button.Triggers>
+                    </Button>
+                </StackPanel>
 
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <StackPanel x:Name="historyPanel">
