--- a/410ShopManagement/Windows/CreateProductWindow.xaml
+++ b/410ShopManagement/Windows/CreateProductWindow.xaml
@@ -48,7 +48,10 @@
                                    materialDesign:HintAssist.FloatingScale=".5" />
                         <Button x:Name="findImageBtn" 
                                 Width="250" Height="250"
-                                Click="findImageBtn_Click"/>
+                                Style="{StaticResource MaterialDesignFlatButton}"
+                                Click="findImageBtn_Click">
+                            <materialDesign:PackIcon Kind="Camera" Width="150" Height="150"/>
+                        </Button>
                         <StackPanel Orientation="Horizontal" 
                                     Margin="0 10 0 0" HorizontalAlignment="Center">
                             <TextBlock Margin="0 3 0 0"
