--- a/410ShopManagement/Windows/SearchProductWindow.xaml
+++ b/410ShopManagement/Windows/SearchProductWindow.xaml
@@ -30,23 +30,24 @@
                 </uc:AppInteractButton>
             </DockPanel>
 
-            <StackPanel Grid.Row="1" Orientation="Horizontal">
-                <TextBox x:Name="searchProductNameTxb"
+            <DockPanel Grid.Row="1">
+                <ComboBox x:Name="searchProductNameTxb"
                          FontSize="36" FontFamily="Calibri" 
                          TextElement.Foreground="{StaticResource secondTextForeground}"
-                         TextAlignment="Left"
-                         Width="450"
                          Margin="25 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center"
                          Background="{x:Null}"
+                         MaxWidth="450"
+                         IsEditable="True"
                          materialDesign:HintAssist.Hint="Search Product Name"
-                         materialDesign:HintAssist.IsFloating="True"
-                         materialDesign:HintAssist.FloatingScale=".5"/>
+                         materialDesign:HintAssist.HintOpacity=".3">
+                    </ComboBox>
 
                 <Button x:Name="applyBtn"
                         Style="{StaticResource MaterialDesignIconButton}"
                         Width="100" Height="100"
                         BorderBrush="{x:Null}" Background="{x:Null}"
-                        Margin="50 0 0 0"
+                        Margin="0 0 20 0" HorizontalAlignment="Right"
+                        IsDefault="True" 
                         Click="ApplyButton_Click">
                     <materialDesign:PackIcon Kind="ChevronRightCircleOutline" Width="90" Height="90" Foreground="#00F988"/>
                     <Button.Triggers>
@@ -62,7 +63,7 @@
                         </EventTrigger>
                     </Button.Triggers>
                 </Button>
-            </StackPanel>
+            </DockPanel>
         </Grid>
     </Border>
 </Window>
