--- a/410ShopManagement/401UC/ProductUC.xaml
+++ b/410ShopManagement/401UC/ProductUC.xaml
@@ -11,22 +11,8 @@
     <Grid>
         <materialDesign:TransitioningContent x:Name="Transitioner" OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.8}">
             <ScrollViewer x:Name="MyScrollViewer" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                <WrapPanel Width="{Binding ElementName=MyScrollViewer, Path=ViewportWidth}"
-                           HorizontalAlignment="Center">
-                    <local:ProductPreview HorizontalAlignment="Center"/>
-                    <local:ProductPreview/>
-                    <local:ProductPreview/>
-                    <local:ProductPreview/>
-                    <local:ProductPreview ProductImageSource="/410ShopManagement;component/Assets/Products/Jacket_White_Fernweh.png"
-                                          ProductName="White Fernweh Jacket"
-                                          ProductPrice="500"
-                                          ProductStatus="Red"
-                                          Click="ProductPreview_Click"/>
-                    <local:ProductPreview/>
-                    <local:ProductPreview/>
-                    <local:ProductPreview/>
-                    <local:ProductPreview/>
-                </WrapPanel>
+                <WrapPanel x:Name="productPanel" Width="{Binding ElementName=MyScrollViewer, Path=ViewportWidth}"
+                           HorizontalAlignment="Center"/>
             </ScrollViewer>
         </materialDesign:TransitioningContent>
     </Grid>
